--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/5977/5977595.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Complete Walmart.com Clone</title>
+    <title>Walmart Clone</title>
   </head>
   <body>
     <div id="root"></div>
