--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/5977/5977595.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Walmart Clone</title>
+    <title>S-Mart+</title>
   </head>
   <body>
     <div id="root"></div>
